Task 1 and 2 Fully functioning. CORS and Proxy Ajax call are working. Added configuration. Fixing TODOs Added DocBlocks Unit testing Install instructions updated. Unit test with travis ci

--- a/module/Hotel/view/hotel/hotel/filter.phtml
+++ b/module/Hotel/view/hotel/hotel/filter.phtml
@@ -20,9 +20,8 @@ if (count($hotels)) {
  */
 echo json_encode(
     [
-        'status' => $status,
+        'success' => $success,
         'formattedResult' => $searchResult,
-        'error' => $error,
         'redirectTo'=>''
     ]
 );
