--- a/module/Hotel/view/layout/layout.phtml
+++ b/module/Hotel/view/layout/layout.phtml
@@ -34,11 +34,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Red Tag"/>&nbsp;<?php echo $this->translate('Travel Brands Search') ?></a>
+                    <a class="navbar-brand" href="<?php echo $this->url('hotel') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Red Tag"/>&nbsp;<?php echo $this->translate('Travel Brands Search') ?></a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?php echo $this->url('hotel') ?>"><?php echo $this->translate('Search Hotel') ?></a></li>
+                        <li>    <a href="<?php echo $this->url('hotel') ?>"><?php echo $this->translate('Task 1 & 2') ?></a></li>
+                        <li><a href="<?php echo $this->url('task3') ?>"><?php echo $this->translate('Task 3') ?></a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -47,7 +48,7 @@
             <?php echo $this->content; ?>
             <hr>
             <footer>
-                <p>&copy; 2005 - <?php echo date('Y') ?> by Lalo Prashad Yadav UnLtd. <?php echo $this->translate('All rights reserved.') ?></p>
+                <p>&copy; 2005 - <?php echo date('Y') ?> by Naj Haq. <?php echo $this->translate('All rights reserved.') ?></p>
             </footer>
         </div> <!-- /container -->
         <?php echo $this->inlineScript() ?>
