Task 1 and 2 Fully functioning. CORS and Proxy Ajax call are working. Added configuration. Fixing TODOs Added DocBlocks Unit testing Install instructions updated. Unit test with travis ci
Conflicts:

	README.md
	module/Hotel/view/hotel/partials/hotelRow.phtml

Update README.md

Update README.md

--- a/module/Hotel/view/hotel/partials/hotelRow.phtml
+++ b/module/Hotel/view/hotel/partials/hotelRow.phtml
@@ -23,6 +23,7 @@ if ($promoPrice) {
      * This is a view decision, so it does not belong in model or controller
      */
     $displayPrice = "<span class='strike'>$" . $regularPrice . " </span>" . "&nbsp; $" . $promoPrice;
+    $displayPrice .= "&nbsp; <span class='description'>" . $price->getPromoDescription() ." </span>";
 }
 ?>
 <tr>
